Bug 884 #6: Added javadoc and fixed build errors.
git-svn-id: http://anonsvn.icesoft.org/repo/icefaces@13046 8668f098-c06c-11db-ba21-f49e70c34f74